<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="#faafafaf">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#faefefef"
        android:padding="5dip">

        <Button
            android:id="@+id/exit_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exit"
            android:layout_marginLeft="30dip" />

        <Button
            android:id="@+id/restart_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Restart"
            android:layout_marginLeft="220dip" />
        <Button
            android:id="@+id/pause_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pause"
            android:layout_marginLeft="125dip" />
    </RelativeLayout>


    <!-- 画板 -->
    <com.example.get_through_maze.WritingView
        android:id="@+id/writing"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:background="#faefefef" >
    </com.example.get_through_maze.WritingView>

</LinearLayout>